; ModuleID = '/home/carl/AnghaBench/reactos/dll/3rdparty/libpng/extr_pngwutil.c_png_write_chunk_header.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/3rdparty/libpng/extr_pngwutil.c_png_write_chunk_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i8*, i64 }

@PNG_IO_CHUNK_DATA = common dso_local global i8* null, align 8
@PNG_IO_CHUNK_HDR = common dso_local global i8* null, align 8
@PNG_IO_WRITING = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_6__*, i64, i64)* @png_write_chunk_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @png_write_chunk_header(%struct.TYPE_6__* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca [8 x i32], align 16
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %9 = icmp eq %struct.TYPE_6__* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %3
  br label %31

11:                                               ; preds = %3
  %12 = getelementptr inbounds [8 x i32], [8 x i32]* %7, i64 0, i64 0
  %13 = load i64, i64* %6, align 8
  %14 = call i32 @png_save_uint_32(i32* %12, i64 %13)
  %15 = getelementptr inbounds [8 x i32], [8 x i32]* %7, i64 0, i64 0
  %16 = getelementptr inbounds i32, i32* %15, i64 4
  %17 = load i64, i64* %5, align 8
  %18 = call i32 @png_save_uint_32(i32* %16, i64 %17)
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %20 = getelementptr inbounds [8 x i32], [8 x i32]* %7, i64 0, i64 0
  %21 = call i32 @png_write_data(%struct.TYPE_6__* %19, i32* %20, i32 8)
  %22 = load i64, i64* %5, align 8
  %23 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %24 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %23, i32 0, i32 1
  store i64 %22, i64* %24, align 8
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %26 = call i32 @png_reset_crc(%struct.TYPE_6__* %25)
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %28 = getelementptr inbounds [8 x i32], [8 x i32]* %7, i64 0, i64 0
  %29 = getelementptr inbounds i32, i32* %28, i64 4
  %30 = call i32 @png_calculate_crc(%struct.TYPE_6__* %27, i32* %29, i32 4)
  br label %31

31:                                               ; preds = %11, %10
  ret void
}

declare dso_local i32 @png_save_uint_32(i32*, i64) #1

declare dso_local i32 @png_write_data(%struct.TYPE_6__*, i32*, i32) #1

declare dso_local i32 @png_reset_crc(%struct.TYPE_6__*) #1

declare dso_local i32 @png_calculate_crc(%struct.TYPE_6__*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
